--- a/app/src/main/res/xml/faq.xml
+++ b/app/src/main/res/xml/faq.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <faq>
-По всем вопросам писать сюда:
-cinema_geek@mail.ru
+1) КАК СВЯЗАТЬСЯ?
+* cinema_geek@mail.ru
+
+2) ПОЧЕМУ Я НЕ МОГУ ПРОПУСТИТЬ ВОПРОС?
+* Что бы вы не пропускали сложные для вас вопросы, отвечая только на легкие. Так решил автор, ему хочется что бы вы уделили внимание всем вопросам которые он для вас подготовил, а не только отгадали самые легкие, и потом просто потеряли интерес к игре. Надеюсь на ваше понимание)
+
+3) ПОЧЕМУ Я НЕ МОГУ ПЕРЕКЛЮЧАТЬСЯ МЕЖДУ ВОПРОСАМИ?
+* В данной функции не вижу большого смысла. Все таки это игра, а не список "что посмотреть". Однако, если такая необходимость появится по вашим просьбам, то данная функция будет добавлена. Поэтому оставьте отзыв о приложении и следите за обновлениями.
+
+4) НОВЫЕ ВОПРОСЫ И КАТЕГОРИИ БУДУТ?
+* Да. Если на это будет спрос, то новые вопросы и категории будут. Скорее всего первыми введениями будут категории КИНОГИК-2, АНИМЕ и КИНОЗНАМЕНИТОСТИ.
+
+5) А ПОЧЕМУ ИМЕННО ЭТИ ФИЛЬМЫ, ВЕДЬ ЕСТЬ МНОГО ДРУГИХ ХОРОШИХ?
+* Потому что игра больше рассчитана на среднего зрителя. Поэтому картины в основном популярные, но тем не менее есть и не очень популярные фильмы, а некоторые даже совсем не популярные. И прошаренным зрителям тут можно интересно провести время, хотя признаю для них викторина может показаться достаточно легкой)
+
+6) ЧТО ДЕЛАТЬ ЕСЛИ Я НИКАК НЕ МОГУ ОТВЕТИТЬ НА ВОПРОС?
+* Любой вопрос можно пройти с помощью подсказок. Если они закончились вы всегда можете получить 10 подсказок, нажав на кнопку БОНУС и просмотрев рекламный ролик. А лучше подключайте своих друзей и родных, вместе отгадывать веселей!) В крайнем случае можно просто загуглить.
+
 </faq>
