--- a/app/src/main/res/xml/rules.xml
+++ b/app/src/main/res/xml/rules.xml
@@ -6,7 +6,7 @@
 
 ОБ ИГРЕ:
 
-Игра-викторина на тематику мультфильмов, фильмов, сериалов, актеров выполненная в минималистическом стиле.
+Игра-викторина на тематику мультфильмов, фильмов, сериалов и фактов из них выполненная в минималистическом стиле.
 
 Ваша задача угадывать названия фильмов, мультфильмов, сериалов, а также всевозможные факты, имена актеров, имена персонажей и т.д. В игре имеется несколько категорий, в каждой категории по 50 вопросов. При отгадывании всех вопросов, в предшествующем меню соответствующая категория будет закрашена в зеленый цвет. При отгадывании всех вопросов категорию можно будет пройти заново.
 
@@ -26,7 +26,7 @@
 
 Кнопка бонус (оранжевая кнопка в центре (кто бы мог подумать)) - показ рекламы, за который вы получите 10 очков.
 
-За каждый пройденный вопрос вы будете получаете 3 очка.
+За каждый пройденный вопрос вы будете получать 2 очка.
 
 УДАЧИ! ДА И ПРЕБУДЕТ С ВАМИ СИЛА!
 </rules>
