--- a/app/src/main/res/layout/list_categories_fragment.xml
+++ b/app/src/main/res/layout/list_categories_fragment.xml
@@ -1,19 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="horizontal">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:id="@+id/list_container"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginBottom="5dp"
+             android:layout_marginTop="5dp"
+             android:orientation="horizontal"
+             android:paddingBottom="10dp"
+             android:paddingTop="10dp">
+
+    <ImageView
+        android:id="@+id/category_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent"
+        android:paddingLeft="7dp"
+        tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry"
+        android:contentDescription=""/>
 
     <TextView
         android:id="@+id/list_categories_title_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
-        android:layout_weight="1"
         android:gravity="center_horizontal|center"
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
+        android:textAlignment="center"
         android:textColor="#FFD4D4D4"
-        android:textSize="30sp"/>
-</LinearLayout>
+        android:textSize="32sp"/>
+</FrameLayout>
