--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="enable_bonus_button">#f0000000</color>
     <color name="disabled_bonus_button">#434343</color>
     <color name="clicked_main_menu">#434343</color>
-    <color name="textColor">#ffffff</color>
+    <color name="textColor">#FFD4D4D4</color>
 </resources>
