--- a/app/src/main/res/xml/text.xml
+++ b/app/src/main/res/xml/text.xml
@@ -861,7 +861,7 @@
 Сказки! У-у-у!
 Дарят счастье, смех и драмы!
 Сказки! У-у-у!</text>
-            <answer>Утинные истории</answer>
+            <answer>Утиные истории</answer>
         </question>
         <question id="41">
             <text>Злая ведьма заточила 18-летнюю Софи в тело старухи. В поисках того, кто поможет ей вернуться к своему облику, Софи знакомится с могущественным волшебником Хаулом и его демоном Кальцифером. Кальцифер должен служить Хаулу по договору, условия которого он не может разглашать. Девушка и демон решают помочь друг другу избавиться от злых чар...</text>
@@ -1685,7 +1685,7 @@
         </question>
         <question id="41">
             <text>Он с детства обожал хоккей, однако, кроме пушечного удара, способностей у него к этой игре «настоящих мужчин» не было. Случай дал ему в руки клюшку для гольфа, и удар его был самым мощным за всю историю этого лужаечного вида спорта, который он так презирал. Но на одном презрении далеко не уедешь, а вот за победу в гольф платят большие деньги. И тут за дело берется профессиональный тренер по гольфу, которому придется весьма нелегко... </text>
-            <answer>Састливчик Гилмор</answer>
+            <answer>Счастливчик Гилмор</answer>
         </question>
         <question id="42">
             <text>Фильм о человеке который проживал один и тот же день. Фильм имеет такое же название как и название праздника, празднуемый в тот самый злаполучный день, в которым ему непосчастливилось застрять.</text>
