--- a/app/src/main/res/layout/list_categories_fragment.xml
+++ b/app/src/main/res/layout/list_categories_fragment.xml
@@ -28,6 +28,7 @@
         android:gravity="center_horizontal|center"
         android:paddingBottom="5dp"
         android:paddingTop="5dp"
+        android:fontFamily="@font/trixie"
         android:textAlignment="center"
         android:textColor="#FFD4D4D4"
         android:textSize="32sp"/>
