--- a/app/src/main/res/xml/faq.xml
+++ b/app/src/main/res/xml/faq.xml
@@ -10,7 +10,7 @@
 * В данной функции не вижу большого смысла. Все таки это игра, а не список "что посмотреть". Однако, если такая необходимость появится по вашим просьбам, то данная функция будет добавлена. Поэтому оставьте отзыв о приложении и следите за обновлениями.
 
 4) НОВЫЕ ВОПРОСЫ И КАТЕГОРИИ БУДУТ?
-* Да. Если на это будет спрос, то новые вопросы и категории будут. Скорее всего первыми введениями будут категории КИНОГИК-2, АНИМЕ и КИНОЗНАМЕНИТОСТИ.
+* Да. Если на это будет спрос, то новые вопросы и категории будут. Скорее всего первыми введениями будут категории КИНОГИК-2, АНИМЕ и КИНОЗНАМЕНИТОСТИ. А так же категории по отдельным киновселенным.
 
 5) А ПОЧЕМУ ИМЕННО ЭТИ ФИЛЬМЫ, ВЕДЬ ЕСТЬ МНОГО ДРУГИХ ХОРОШИХ?
 * Потому что игра больше рассчитана на среднего зрителя. Поэтому картины в основном популярные, но тем не менее есть и не очень популярные фильмы, а некоторые даже совсем не популярные. И прошаренным зрителям тут можно интересно провести время, хотя признаю для них викторина может показаться достаточно легкой)
