--- a/app/src/main/res/xml/text.xml
+++ b/app/src/main/res/xml/text.xml
@@ -205,7 +205,7 @@
         </question>
         <question id="45">
             <text>После смерти матери Анна попадает в клинику. После лечения она возвращается домой и узнаёт, что отец встречается с Рейчел, медсестрой, которая когда-то ухаживала за её умирающей матерью. Смятение Анны сменяется ужасом, когда её посещает призрак матери и сообщает о злобных намерениях медсестры. Вместе со своей сестрой она начинает расследовать странные обстоятельства гибели их матери, и вскоре их противостояние с незваной гостьей достигает апогея...</text>
-            <answer>Незванные</answer>
+            <answer>Незваные</answer>
         </question>
         <question id="46">
             <text>Компания смелых очаровательных девушек привыкла проводить свой отпуск в экстремальных путешествиях. На этот раз принято решение исследовать отдаленные горные хребты. Все идет неплохо до тех пор, пока они не находят загадочный грот. Какие тайны он хранит? Женское любопытство одерживает верх над осторожностью, и вот подруги уже глубоко под землёй.</text>
@@ -2432,7 +2432,7 @@
         </question>
         <question id="24">
             <text>Термин обозначающий эпизодическую роль какой-либо знаменитости?</text>
-            <answer>Камэо</answer>
+            <answer>Камео</answer>
         </question>
         <question id="25">
             <text>Он пожалуй самый добрый актер Голливуда. Он не дает интервью, ведет довольно скромный и замкнутый образ жизни, сторонится светских мероприятий и старается не попадать в объективы фотокамер, большинство своих гонораров он жертвует благодварительным фондам и персоналу на съемочной площадке. Несмотря на это его фильмография впечатляет, а каждая его роль пропущена через себя, прожита и прочувствована. Его имя ...</text>
