--- a/app/src/main/res/drawable/category_list.xml
+++ b/app/src/main/res/drawable/category_list.xml
@@ -9,7 +9,7 @@
     </item>
     <item>
         <shape>
-            <solid android:color="#642f2f2f"/>
+            <solid android:color="@color/mainBackgroundColor"/>
             <stroke android:width="1dp" android:color="#c8ff8000"/>
             <corners android:radius="5.0dip" />
         </shape>
