--- a/app/src/main/res/drawable/text__for_read.xml
+++ b/app/src/main/res/drawable/text__for_read.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="#f52f2f2f"/>
+            <solid android:color="@color/mainBackgroundColor"/>
             <stroke android:width="1dp" android:color="#c8ff8000"/>
             <corners android:radius="5.0dip" />
         </shape>
