Refactor. Added new category

--- a/app/src/main/res/xml/text.xml
+++ b/app/src/main/res/xml/text.xml
@@ -2358,9 +2358,8 @@
             <answer>Стэн Ли</answer>
         </question>
         <question id="6">
-            <text>Продолжите: Валар Моргулис
-...</text>
-            <answer>Валар Дохаэрис</answer>
+            <text>Как называется сценарий, который базируется на основе какого-либо литературного произведения (роман, пьеса, рассказ и т. д.), телешоу или другого фильма.</text>
+            <answer>Адаптивный</answer>
         </question>
         <question id="7">
             <text>Кто был прототипом Аполло Крида из фильма «Рокки»?</text>
@@ -2528,8 +2527,11 @@
             <answer>Кэтрин Хепберн</answer>
         </question>
         <question id="48">
-            <text>Опять же сериал «Игра Престолов». В этом сериале девочке было предложено назвать 3 имени, и Человек бы их убил. Однако, если бы вместо девочки был другой персонаж этого сериала, то назвав три имени он бы совершил таким образом суицид. Как зовут этого персонажа?</text>
-            <answer>Ходор</answer>
+            <text>Если вы написали объективно достаточно хороший сценарий это еще не значит что все захотят поучавствовать в его реализации. Несмотря на то что ваш сценарий безупречен, в Голливуде он может пылиться достаточно долго. Причины этому могут быть разные, но в основном это из-за того что студии любят выбирать безопасные сценарии (которые 100% всем понравятся), а так же они любят франшизы и сиквелы (истории со своей фанбазой).
+Поэтому с оригинальными сценариями все гораздо сложней — такие картины доверяют снять только именитым режиссерам, как Бёртон, Финчер и Скорсезе. Среди таких фильмов были такие как Миллионер из трущоб, Король говорит, Одержимость, Выживший, Игра в имитацию и т.д
+Все такие сценарии входят в один общий перечень, который имеет свое собственное название. Какое?
+P.S. Название, если честно, далеко не оригинальное.</text>
+            <answer>Черный список</answer>
         </question>
         <question id="49">
             <text>Актер, который в 2016 году накоец то таки взял премию «Оскар» за лучшую мужскую роль.</text>
@@ -2758,6 +2760,217 @@
         <question id="50">
             <text>«Посидим допоздна, потравим анекдоты, а утром испеку вафельки».</text>
             <answer>Осел</answer>
+        </question>
+    </category>
+
+    <category name="ИГРА ПРЕСТОЛОВ">
+        <question id="1">
+            <text>Каким именем представился безликий, перед Арьей Старк?</text>
+            <answer>Якен Хгар</answer>
+        </question>
+        <question id="2">
+            <text>Как называют человека, который имеет магическую способность переселяться в сознание животных и даже людей?</text>
+            <answer>Варг</answer>
+        </question>
+        <question id="3">
+            <text>Представьте что вы Дейенерис Таргариен и вам зачем то понадиблось срочно сжечь пару людей. Слава богу рядом есть ваш любимый дракон, осталось отдать команду...</text>
+            <answer>Дракарис</answer>
+        </question>
+        <question id="4">
+            <text>Как Кхал Дрого называет трон Вестероса?</text>
+            <answer>Железный стул</answer>
+        </question>
+        <question id="5">
+            <text>Давайте проверим насколько хорошо вы знаете прозвища?
+Напишите прозвиже одного из главных персонажей, имеющего самый низкий рост.</text>
+            <answer>Полумуж</answer>
+        </question>
+        <question id="6">
+            <text>Какое прозвище носит сир Давос Сиворт. Если вы забыли, то это тот кто был советником Джона Сноу в последних сезонах.
+Кстати забавный факт, в книгах Станнис отрезал Давосу пальцы на левой руке. Но так как актёр Лиам Каннингем — левша, в сериале Сиворту отрезают пальцы на правой руке.</text>
+            <answer>Луковый рыцарь</answer>
+        </question>
+        <question id="7">
+            <text>Окей, давайте чего полегче. Прозвище Джейме Ланнистера.</text>
+            <answer>Цареубийца</answer>
+        </question>
+        <question id="8">
+            <text>Согласен было уж очень легко)
+Давайте посложнее, прозвище Робба Старка?</text>
+            <answer>Молодой волк</answer>
+        </question>
+        <question id="9">
+            <text>Хорошо, еще сложнее, какое прозвище носит Оленна Тирелл?
+Эта самая бойкая старушка в сериале) Небольшая подсказка, свое прозвище она получила за агрессивную манеру общения, а также принадлежность к «дому роз».</text>
+            <answer>Королева шипов</answer>
+        </question>
+        <question id="10">
+            <text>А какое прозвище носит красавчик Тормунд?</text>
+            <answer>Великанья смерть</answer>
+        </question>
+        <question id="11">
+            <text>Эту кличку Теон Грейджой получил от Рамси Болтона.</text>
+            <answer>Вонючка</answer>
+        </question>
+        <question id="12">
+            <text>И контрольный. Полное прозвище Дейенерис Таргариен?
+Ладно, договоримся на первом в списке)</text>
+            <answer>Бурерожденная</answer>
+        </question>
+        <question id="13">
+            <text>Родовой замок семьи Ланнистеров?</text>
+            <answer>Утес Кастерли</answer>
+        </question>
+        <question id="14">
+            <text>Как называют людей, которые отвечают за хозяйственную деятельность в замке лорда или короля, занимаются организацией работы слуг и управляют собственностью лорда.</text>
+            <answer>Стюард</answer>
+        </question>
+        <question id="15">
+            <text>По дороге ведущей к этому дорогу каждую милю сопровождали трупы детей привязанные к дорожным столбам и указывающие направление. Напишите название этого города.</text>
+            <answer>Миэрин</answer>
+        </question>
+        <question id="16">
+            <text>Этот дракон раньше принадлежал Эйгону Таргариену. Самый крупный и самый старый дракон Таргариенов, чей череп хранится в подземелье Красного замка вместе с остальными черепами драконов. Говорят что он был настолько велик, что тень от него могла накрыть целый город. Как звали этого дракона?</text>
+            <answer>Балерион</answer>
+        </question>
+        <question id="17">
+            <text>После захвата Миэрина Дейенерис Бурерожденной, было сформировано подпольное движение против ее власти. Какое название имело это движение? (Название организации имеет общее с древнегреческой мифологией)</text>
+            <answer>Сыны Гарпии</answer>
+        </question>
+        <question id="18">
+            <text>Давайте проверим как вы знаете популярные фразы сериала.
+Эта фраза - девиз дома Старков. Еще ее любил повторять Нэд Старк.</text>
+            <answer>Зима близко</answer>
+        </question>
+        <question id="19">
+            <text>Арья Старк произнесла эту фразу после того, как свершила свою месть над Фреями, отравив их.</text>
+            <answer>Север помнит</answer>
+        </question>
+        <question id="20">
+            <text>Сейчас будет сложно. Распространенное ругательство в Семи королевствах, особенно часто его использовал Сандор Клиган.</text>
+            <answer>Седьмое пекло</answer>
+        </question>
+        <question id="21">
+            <text>Что мы говорим богу смерти?</text>
+            <answer>Не сегодня</answer>
+        </question>
+        <question id="22">
+            <text>Это животное - символ дома Старков.</text>
+            <answer>Лютоволк</answer>
+        </question>
+        <question id="23">
+            <text>Хорошо. А как звали лютоволка ... Ну допустим Арьи Старк?</text>
+            <answer>Нимерия</answer>
+        </question>
+        <question id="24">
+            <text>А как звали лютоволка Робба Старка?</text>
+            <answer>Серый Ветер</answer>
+        </question>
+        <question id="25">
+            <text>В серии романов Песнь льда и пламени говорится, что герой должен появиться на свет после долгого лета, когда воссияет красная звезда, а на землю спустятся зло, холод и тьма. Он - принц, что был обещан, родится среди дыма и соли и разбудит драконов из камня. Кто этот легендарный персонаж веры во Владыку Света?</text>
+            <answer>Азор Ахай</answer>
+        </question>
+        <question id="26">
+            <text>Его ненавидели все зрители и все Семь Королевств.</text>
+            <answer>Джоффри Баратеон</answer>
+        </question>
+        <question id="27">
+            <text>Нечеловеческая раса, которая жила в Вестеросе ещё до прибытия на континент первых людей двенадцать тысяч лет назад. Те кто создали белых ходоков во время войны с первыми людьми.</text>
+            <answer>Дети леса</answer>
+        </question>
+        <question id="28">
+            <text>Эта вещь носит название которым на Вестеросе обычно называют обсидиан, горную породу, состоящую из вулканического стекла. Это один из двух известных материалов, которыми можно убить белых ходоков.</text>
+            <answer>Драконье стекло</answer>
+        </question>
+        <question id="29">
+            <text>Попробуем вспомнить названия парочки мечей. Первый, фамильный меч Мормонтов. Джиор Мормонт подарил этот меч Джону Сноу в благодарность за спасение своей жизни.</text>
+            <answer>Длинный Коготь</answer>
+        </question>
+        <question id="30">
+            <text>Меч, который достался Арье Старк в подарок</text>
+            <answer>Игла</answer>
+        </question>
+        <question id="31">
+            <text>Один из двух мечей, выкованных изо Льда Старков. Был подарен Джейме Ланнистеру, а тот подарил его Бриенне Тарт.</text>
+            <answer>Верный Клятве</answer>
+        </question>
+        <question id="32">
+            <text>Меч Станниса Баратеона. По приказу Мелисандры он вытащил его из огня, в котором сжигали статую Бога с Семью Лицами. Согласно пророчествам, меч должен быть вытащен из огня тем, кого выбрал Владыка Света. По легенде, этот меч выкован тем самым мастером по имени Азор Ахай, который был выбран Владыкой Света, чтобы сражаться против темноты.</text>
+            <answer>Светозарный</answer>
+        </question>
+        <question id="33">
+            <text>Человеческая раса, вторгшаяся в Вестерос за шесть тысяч лет до начала событий сериала. В настоящий момент этот народ доминирует в Семи Королевствах.</text>
+            <answer>Андалы</answer>
+        </question>
+        <question id="34">
+            <text>Божество, которому поклоняются на Железных островах.</text>
+            <answer>Утонувший Бог</answer>
+        </question>
+        <question id="35">
+            <text>Помните ли вы всех драконов Дейенерис? Дрогон, Рейгаль и ...?</text>
+            <answer>Визерион</answer>
+        </question>
+        <question id="36">
+            <text>Воины-евнухи из Астапора, чья репутация в бою не имеет равных.</text>
+            <answer>Безупречные</answer>
+        </question>
+        <question id="37">
+            <text>А как звали командующего Безупречными?</text>
+            <answer>Серый Червь</answer>
+        </question>
+        <question id="38">
+            <text>На гербе этого дома изображен человек с содранной кожей.</text>
+            <answer>Болтоны</answer>
+        </question>
+        <question id="39">
+            <text>Кто бог титек и вина?</text>
+            <answer>Тирион</answer>
+        </question>
+        <question id="40">
+            <text>Опасная жидкость, создаваемая магами из Гильдии алхимиков, которые называют его субстанцией. Она очень легко воспламеняема, и тогда она взорвется с огромной силой, начнется пожар, который нельзя потушить ничем, кроме большого количества песка.</text>
+            <answer>Дикий огонь</answer>
+        </question>
+        <question id="41">
+            <text>Эйрис II Таргариен — последний король на Железном троне из династии Таргариенов был так же известен как ...?</text>
+            <answer>Безумный Король</answer>
+        </question>
+        <question id="42">
+            <text>Ближайший советник короля и второй после него человек в Семи Королевствах по важности и ответственности.</text>
+            <answer>Десница</answer>
+        </question>
+        <question id="43">
+            <text>Как там было дальше?
+ТЫ ИЗНАСИЛОВАЛ ЕЁ! ТЫ УБИЛ ЕЁ! ...</text>
+            <answer>ты убил ее детей</answer>
+        </question>
+        <question id="44">
+            <text>Эддард Старк нанял его для обучения своей дочери Арьи.</text>
+            <answer>Сирио Форель</answer>
+        </question>
+        <question id="45">
+            <text>Кого то забыл.
+Джоффри, Серсея, Мерин Трэнт, Берик Дондаррион, Торос из Мира, Полливер, Уолдер Фрей, Тайвин Ланнистер, Гора, Илин Пейн, Пес</text>
+            <answer>Красная женщина</answer>
+        </question>
+        <question id="46">
+            <text>Валар Моргулис!</text>
+            <answer>Валар Дохаэрис</answer>
+        </question>
+        <question id="47">
+            <text>В сериале было показано религиозного движения в которое входят ярые последователи веры в Семерых. В основном это бедные и непритязательные люди, которые выступают в качестве защитников простого народа, страдающего от лишений, которые вызвала Война пяти королей. Они носят простую холщовую одежду и ходят босиком, отдавая все свои вещи тем, кто нуждается в них больше. Волосы стригут коротко. Как звали лидера этого движения?</text>
+            <answer>Его Воробейшество</answer>
+        </question>
+        <question id="48">
+            <text>В этом сериале девочке было предложено назвать 3 имени, и Человек бы их убил. Однако, если бы вместо девочки был другой персонаж этого сериала, то попытавшись он бы совершил таким образом суицид. Как зовут этого персонажа?</text>
+            <answer>Ходор</answer>
+        </question>
+        <question id="49">
+            <text>На знаменитом турнире в Харренхоле после победы в финальном поединке Рейгар объявил королевой турнира не свою жену Элию, а ..., и вручил ей венок из ее любимых голубых зимних роз. Чью имя пропущено?</text>
+            <answer>Лианна Старк</answer>
+        </question>
+        <question id="50">
+            <text>На последок как всегда сложно. Какого слова в дотракийском языке нет?</text>
+            <answer>Спасибо</answer>
         </question>
     </category>
 
