--- a/app/src/main/res/drawable/category_list2.xml
+++ b/app/src/main/res/drawable/category_list2.xml
@@ -8,9 +8,9 @@
         </shape>
     </item>
     <item
-        android:drawable="@drawable/category_bg"
-        android:bottom="3dp"
-        android:left="3dp"
-        android:right="3dp"
-        android:top="3dp"/>
+        android:drawable="@drawable/category_bg2"
+        android:bottom="4dp"
+        android:left="4dp"
+        android:right="4dp"
+        android:top="4dp"/>
 </layer-list>
