--- a/app/src/main/res/layout/categories_fragment_holder.xml
+++ b/app/src/main/res/layout/categories_fragment_holder.xml
@@ -3,35 +3,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
-    android:layout_marginTop="5dp"
+    android:layout_height="80dp"
     android:layout_marginStart="5dp"
+    android:layout_marginTop="5dp"
     android:layout_marginEnd="5dp"
+    android:layout_marginBottom="5dp"
     android:orientation="horizontal"
-    android:paddingBottom="10dp"
-    android:paddingTop="10dp">
-
-    <ImageView
-        android:id="@+id/category_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent"
-        android:paddingLeft="7dp"
-        tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry"
-        android:contentDescription=""/>
+    android:background="@drawable/category_list">
 
     <TextView
         android:id="@+id/list_categories_title_text_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
-        android:gravity="center_horizontal|center"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp"
+        android:layout_marginBottom="5dp"
         android:fontFamily="@font/trixie"
+        android:gravity="center_horizontal|center"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:textAlignment="center"
         android:textColor="#FFD4D4D4"
-        android:textSize="32sp"/>
+        android:textSize="32sp"
+        tools:text="УЖАСЫ" />
+
+    <ImageView
+        android:id="@+id/list_categories_image_view"
+        android:layout_width="40dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:src="@drawable/oscar" />
 </FrameLayout>
