--- a/app/src/main/res/layout/question_fragment.xml
+++ b/app/src/main/res/layout/question_fragment.xml
@@ -22,6 +22,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:layout_weight="1"
+            android:fontFamily="@font/trixie"
             android:textAlignment="textStart"
             android:textColor="#FFD4D4D4"
             android:textSize="18sp"
@@ -33,6 +34,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="end"
             android:layout_weight="1"
+            android:fontFamily="@font/trixie"
             android:textAlignment="textEnd"
             android:textColor="#FFD4D4D4"
             android:textSize="18sp"
@@ -43,13 +45,13 @@
     <ScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_above="@+id/answer_container"
+        android:layout_height="match_parent"
         android:layout_below="@+id/title_container"
+        android:layout_above="@+id/answer_container"
         android:layout_marginLeft="13dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="13dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/rectangle_rounded"
         android:scrollbars="none">
 
@@ -82,7 +84,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="15dp"
         android:orientation="vertical">
 
     </LinearLayout>
@@ -95,8 +97,10 @@
         android:layout_alignParentStart="true"
         android:layout_marginLeft="13dp"
         android:layout_marginRight="13dp"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
+        android:layout_marginBottom="15dp"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <Button
             android:id="@+id/hint_1"
@@ -106,6 +110,7 @@
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:background="@drawable/hint_button"
+            android:fontFamily="@font/trixie"
             android:text="@string/first_hint"
             android:textColor="#ffffff"
             android:textSize="12sp" />
@@ -116,6 +121,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginEnd="5dp"
+            android:fontFamily="@font/trixie"
             android:layout_weight="1"
             android:background="@drawable/bonus_button"
             android:enabled="false"
@@ -128,6 +134,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginEnd="5dp"
+            android:fontFamily="@font/trixie"
             android:layout_weight="1"
             android:background="@drawable/hint_button"
             android:text="@string/second_hint"
@@ -143,7 +150,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:orientation="vertical" />
 
     <Button
@@ -156,6 +163,19 @@
         android:text="@string/next_text"
         android:visibility="invisible" />
 
+    <TextView
+        android:id="@+id/large_question_number"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fontFamily="@font/trixie"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="180sp"
+        android:visibility="gone"
+        tools:text="25"
+        tools:visibility="visible" />
+
     <ProgressBar
         android:id="@+id/progress_bar_question"
         android:layout_width="wrap_content"
@@ -163,6 +183,6 @@
         android:layout_centerInParent="true"
         android:indeterminateDrawable="@drawable/progress_bar"
         android:visibility="gone"
-        tools:visibility="visible"/>
+        tools:visibility="visible" />
 
 </RelativeLayout>
