--- a/app/src/main/res/layout/question_list_fragment.xml
+++ b/app/src/main/res/layout/question_list_fragment.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/mainBackgroundColor">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fragment_categories_recycler_view"
+        android:id="@+id/question_list_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:itemCount="20"/>
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        tools:itemCount="30"/>
 
     <ProgressBar
-        android:id="@+id/categories_progress_bar"
+        android:id="@+id/question_list_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:indeterminateDrawable="@drawable/progress_bar"
         android:visibility="gone"
         tools:visibility="visible"/>
 
-</FrameLayout>
+</RelativeLayout>
